# partisipation-svn

trunk/core/: Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.svn  README  configure.ac  core_launcher.c  doxygen.dox  indent.pro
trunk/core/accounts/: Makefile  account_client_interface.h  account_core_interface.h  account_management.c  accounts.dtd  accounts.xml  list.h
trunk/core/cfg/: core_config.dtd
trunk/core/config/xml/: Makefile.am  core_config.dtd  (+1 more)
trunk/core/core/: Makefile  Makefile.am  Makefile.svn  call_id_generator.c  call_id_generator.h  event_dispatcher.c  event_dispatcher.h  events.h  statemachine.c  statemachine.h
trunk/core/doc/: Doxyfile  Makefile  Makefile.am  doxygen.dox
trunk/core/lib/: Makefile.am
trunk/core/remote/: Makefile  Makefile.am  Makefile.svn
trunk/core/rtp/: Makefile  Makefile.svn  rtp-test.c
trunk/core/sipstack/: Makefile  Makefile.am  Makefile.svn  osip_adapter.c  osip_adapter_cm.c  osip_adapter_cm.h  sip_listener.c  sip_listener_interface.h  sip_stack_interface.h  test_osip.c  test_sipstack.c
trunk/core/tests/: Makefile  Makefile.svn
trunk/core/util/: Makefile  Makefile.am  Makefile.svn  storage.h  thread_management.c  thread_management.h
trunk/core/xmlrpc-test/: Makefile  account_management.c  account_management.h  call_management.c  call_management.h  callback_util.c  callback_util.h  clean.sh  compile.sh  constants.h  extras_management.c  extras_management.h  gui_callback.c  gui_callback.h  registration_management.c  registration_management.h  volume_management.c  volume_management.h  xmlrpc_server.c
(+343 files in other folders)
